[package]
name = "Jay-Patel-Final-Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = {version = "1.0", features = ["derive"]}
petgraph = "0.6"
plotters = "0.3"
rayon = "1.5"
anyhow = "1.0"
thiserror = "1.0"
ndarray = "0.15.6"
ndarray-stats = "0.4.0"
ndarray-linalg = "0.14"
statrs = "0.15.0"
rustworkx-core = "0.14.2"
